--- a/src/components/toggle/Toggle.css
+++ b/src/components/toggle/Toggle.css
@@ -1,7 +1,7 @@
 .toggle-background {
     width: 100px;
     height: 50px;
-    background-color:black;
+    background-color:rgb(228, 25, 25);
     margin: 50px 50px;
     cursor: pointer;
     border: 2px solid rgb(206, 12, 164); 
